[package]
name = "tetris"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
flo_draw = { version = "0.3", optional = true }
flo_canvas = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
ndarray = "0.16.1"
rand = "0.9.1"
rustysynth = "1.3.5"
sdl2 = { version = "0.37", optional = true }

[features]
default = ["sdl"]
sdl = ["dep:sdl2"]
flo_draw = ["dep:flo_draw", "dep:flo_canvas", "dep:futures"]
